--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -20,7 +20,7 @@
                title="View all users" 
                class="button u-pull-right u-add-margin-left">
                 <span class="oi" data-glyph="eye" title="View" aria-hidden="true"></span>
-                <span class="u-hide-on-mobile"> all</span>
+                <span class="u-hide-on-medium"> all</span>
             </a>
             <table class="u-full-width">
                 <thead>
@@ -82,13 +82,13 @@
                title="View all causes"
                class="button u-pull-right u-add-margin-left">
                 <span class="oi" data-glyph="eye" title="View" aria-hidden="true"></span>
-                <span class="u-hide-on-mobile"> all</span>
+                <span class="u-hide-on-medium"> all</span>
             </a>
             <a href="{{ url_for('causes.cause_add') }}" 
                title="Add new cause"
                class="button u-pull-right">
                 <span class="oi" data-glyph="plus" title="Add" aria-hidden="true"></span>
-                <span class="u-hide-on-mobile"> cause</span>
+                <span class="u-hide-on-medium"> cause</span>
             </a>
             <table class="u-full-width">
                 <thead>
@@ -151,13 +151,13 @@
                title="View all pages"
                class="button u-pull-right u-add-margin-left">
                 <span class="oi" data-glyph="eye" title="View" aria-hidden="true"></span>
-                <span class="u-hide-on-mobile"> all</span>
+                <span class="u-hide-on-medium"> all</span>
             </a>
             <a href="{{ url_for('.admin_page_add') }}" 
                title="Add new page"
                class="button u-pull-right">
                 <span class="oi" data-glyph="plus" title="Add" aria-hidden="true"></span>
-                <span class="u-hide-on-mobile"> page</span>
+                <span class="u-hide-on-medium"> page</span>
             </a>
             <table class="u-full-width">
                 <thead>
