--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -209,7 +209,7 @@
                 <div class="twelve columns u-text-center">
                     <small>&copy; 2016 {{ site_name }} authors</small> |
                     <a href="/terms_of_service"><small>
-                        {{ _('Terms of Service') }}
+                        {{ _('Terms of service') }}
                     </small></a>
                 </div>
             </div>
