Add action images, simplify cause / action views..
..and fix cause add / edit title

--- a/app/templates/admin/cause_list.html
+++ b/app/templates/admin/cause_list.html
@@ -51,7 +51,7 @@
                             <a href="{{ url_for('static', filename=cause.image) }}">{{ cause.image }}</a>
                         </td>
                         <td class="u-text-right">
-                          <a href="{{ url_for('causes.cause_edit', slug=cause.slug) }}">
+                          <a href="{{ url_for('causes.cause_add_edit', slug=cause.slug) }}">
                               <span class="oi" data-glyph="pencil" title="Edit" aria-hidden="true"></span>
                           </a>
                         </td>
