--- a/app/templates/causes/action_form.html
+++ b/app/templates/causes/action_form.html
@@ -1,10 +1,12 @@
 {% extends "base_form.html" %}
 {% set active_page = "cause" %}
 
+{% block title %}{{ _("Edit Action") }} - {{ super() }}{% endblock %}
+
 {% block content %}
 <div class="container u-add-margin-top">
     {% from "helpers/forms.html" import render_field, render_boolean %}
-    <form id="cause" name="cause" action="" method="post">
+    <form id="cause" name="cause" action="" method="post" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
         {{ form_trans.hidden_tag() }}
         <div class="row">
@@ -13,16 +15,10 @@
                     {{ render_field(form_trans.title, class="u-full-width") }}
                 </div>
             </fieldset>
-            <!--
-            <fieldset>
-                <div class="six columns offset-by-three">
-                    {{ render_field(form_trans.summary, class="u-full-width")  }}
-                </div>
-            </fieldset>
-            -->
             <fieldset>
                 <div class="six columns offset-by-three">
                     {{ render_field(form_trans.description, class="u-full-width")  }}
+                    {{ render_field(form.image, class="u-full-width")  }}
                 </div>
             </fieldset>
             <fieldset>
