Disable slider infinite scrolling..
..to prevent odd duplicate actions

--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -42,7 +42,8 @@
             slideWidth: 345,
             minSlides: 1,
             maxSlides: 3,
-            slideMargin: 32
+            slideMargin: 32,
+            infiniteLoop: false
         });
         $('#stand-with-us').click(function() {
             ga('send', {
