Switch the font to Rawline (a fork of Raleway) that defaults to lining numerals

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -71,6 +71,7 @@ body {
     font-size: 1.6rem;
     color: #161310;
     padding-top: 6.5rem;
+    font-family: "Rawline", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 hr {
     border-color: #ff9900;
