--- a/app/templates/styleguide/typography.html
+++ b/app/templates/styleguide/typography.html
@@ -22,7 +22,7 @@
         <div class="nine columns">
 
             <h2>Typography</h2>
-            <p>Just as vanilla Skeleton, we're using Raleway font, which is served locally. Type is set using <em>rems</em>, so all font sizes are based on a single <code>fots-size</code> property defined for <code>&lt;html&gt;</code> element. Generally, that definition should not be changed. This is done to keep font-size relationships consistent. All measurements are base 10, so <code>&lt;h1&gt;</code> with <em>5.0rem</em> means <em>50px</em>.</p>
+            <p>We're using a fork of Raleway font called <a href="https://h-ibaldo.github.io/Raleway_Fixed_Numerals/">Rawline</a>, which uses lining numbers as default. Type is set using <em>rems</em>, so all font sizes are based on a single <code>fots-size</code> property defined for <code>&lt;html&gt;</code> element. Generally, that definition should not be changed. This is done to keep font-size relationships consistent. All measurements are base 10, so <code>&lt;h1&gt;</code> with <em>5.0rem</em> means <em>50px</em>.</p>
             <p>The base font size is 15rem (15px) with 1.6rem line height (24px). Here are some examples of basic tags:</p>
             <div class="row">
                 <div class="one-half column">
