--- a/app/static/css/fonts.css
+++ b/app/static/css/fonts.css
@@ -1,18 +1,18 @@
 @font-face {
-  font-family: 'Raleway';
+  font-family: 'Rawline';
   font-style: normal;
   font-weight: 300;
-  src:url(../fonts/Raleway-Light.ttf) format('truetype');
+  src:url(../fonts/Raleway_Fixed_Numerals/font/rawline-300.ttf) format('truetype');
 }
 @font-face {
-  font-family: 'Raleway';
+  font-family: 'Rawline';
   font-style: normal;
   font-weight: 400;
-  src: url(../fonts/Raleway-Regular.ttf) format('truetype');
+  src: url(../fonts/Raleway_Fixed_Numerals/font/rawline-400.ttf) format('truetype');
 }
 @font-face {
-  font-family: 'Raleway';
+  font-family: 'Rawline';
   font-style: normal;
   font-weight: 600;
-  src: url(../fonts/Raleway-SemiBold.ttf) format('truetype');
+  src: url(../fonts/Raleway_Fixed_Numerals/font/rawline-600.ttf) format('truetype');
 }
